# ai-test

./: .gitignore  README.md
agent/: README.md
agent/src/services/api/: client.ts  codex-fetch-adapter.ts  openai-compat-fetch-adapter.ts
agent/src/utils/model/: providers.ts
cases/: test.md  test2.md
computer-control-mcp/: .gitignore  README.md  TEST_REPORT.md  pyproject.toml
computer-control-mcp/src/computer_control_mcp/: __init__.py  __main__.py  keymap.py  runtime.py  server.py
computer-control-mcp/tests/: conftest.py  test_keymap.py  test_runtime_actions.py  test_runtime_helpers.py  test_save_screen_recording.py  test_save_screenshot.py  test_server.py
computer-control-mcp/tests/reports/: .gitignore
conclusions/: found_it_test_2026-04-17.md  found_it_test_2026-04-20.md  insert_master_test_2026-04-20.md
scripts/: run-all-cases.sh  setup-codex-env.sh
skills/compare-result-screenshot-with-baseline/: SKILL.md
skills/compare-result-screenshot-with-baseline/agents/: openai.yaml
skills/compare-result-screenshot-with-baseline/references/: file-conventions.md
skills/compare-result-screenshot-with-baseline/scripts/: generate_review_image.py  resolve_screenshot_paths.py
